# FROST-BIP340

./: .gitignore  LICENSE  README.md  frost.py  pyproject.toml
.github/workflows/: ci.yml
docs/guide/: 01-introduction.md  02-finite-fields.md  03-schnorr.md  04-secret-sharing.md  05-commitments.md  06-dkg.md  07-signing.md  08-advanced.md  09-architecture.md  README.md
dot/api/: frost.gv
examples/simple-signer/: Cargo.toml
examples/simple-signer/src/: main.rs  test.py  transaction.rs
notebooks/: experiment-01-scalar-axioms.ipynb  experiment-02-corrupted-shares.ipynb  experiment-03-signing-order.ipynb  experiment-04-share-repair.ipynb  experiment-05-enrollment.ipynb  experiment-06-threshold-changes.ipynb  experiment-07-performance.ipynb  tutorial-01-scalars.ipynb  tutorial-02-points.ipynb  tutorial-03-schnorr.ipynb  tutorial-04-secret-sharing.ipynb  tutorial-05-dkg.ipynb  tutorial-06-signing.ipynb
src/: frost.py
src/frost/: __init__.py  aggregator.py  cli.py  constants.py  keygen.py  lagrange.py  matrix.py  musigparticipant.py  participant.py  point.py  polynomial.py  repair.py  scalar.py  signing.py  tagged_hash.py  threshold.py
tests/: README.md  conftest.py  requirements.txt  strategies.py  test_derived.py  test_enrollment.py  test_error_paths.py  test_frost.py  test_frosty_musig.py  test_keygen.py  test_properties.py  test_refresh.py  test_repair.py  test_scalar.py  test_sign.py  test_strategies.py  test_threshold.py
