[project]
name = "frost-bip340"
version = "0.0.1"
authors = [
    {name = "Jesse Posner"},
]
description = "BIP340 compatible implementation of Flexible Round-Optimized Schnorr Threshold Signatures (FROST)."
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "hypothesis>=6.100",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/frost"]

[tool.coverage.run]
source = ["src"]
